<resources>
    <string name="app_name">Inventory</string>
    <string name="save_product">Save Product</string>
    <string name="no_products">No products have been added.</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_stock">Enter Stock Amount</string>
    <string name="hint_product_price">Enter Price</string>
    <string name="hint_product_description">Enter Description</string>
    <string name="how_to_start">Press the FAB button to add something</string>
    <string name="currency">£</string>
    <string name="adjust_stock">Adjust Stock</string>
    <string name="hint_part_no">Enter Part No</string>
    <string name="title_add_product">Add Product</string>
    <string name="title_edit_product">Edit Product</string>
    <string name="select_image">Select Image</string>
    <string name="dialog_unsaved_changes">There are unsaved changes!  What do you want to do?</string>
    <string name="dialog_option_discard">Discard Changes</string>
    <string name="dialog_option_keep_editing">Keep Editing</string>
    <string name="delete_product">Delete Product</string>
    <string name="required_product_name">Product name is required</string>
    <string name="required_product_price">Product price is required</string>
    <string name="required_product_part_no">Part Number is required</string>
    <string name="required_product_image">Image is required</string>
    <string name="required_product_description">Product requires description</string>
    <string name="error_saving">Could not save. Please try again</string>
    <string name="save_successful">Product Saved</string>
    <string name="delete_option_cancel">No! Don\'t delete!</string>
    <string name="delete_option_delete">It\'s cool, delete it</string>
    <string name="delete_dialog">Are you sure you want to delete this item?  Can not be undone!</string>
    <string name="delete_failed">Could not delete. Please try again</string>
    <string name="delete_success">Delete successful</string>
    <string name="required_product_stock">Stock is required!</string>

    <string name="num_in_stock">%1$d in stock</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="currency_price">£%1$.2f</string>
    <string name="formatted_price">%1$.2f</string>
    <string name="product_image">Product Image</string>
    <string name="decrement_stock">Decrement Stock</string>
    <string name="increment_stock">Increment Stock</string>
    <string name="click_to_add_image">Click to add image</string>
    <string name="order_stock">Order Stock</string>
    <string name="cant_lower_stock">Stock can not go below zero</string>
    <string name="error_unknown_uri">Cannot query unknown URI: %1$s</string>
    <string name="unknown_uri_match">Unknown URI %1$s with match %2$d</string>
    <string name="insertion_not_supported">Insertion is not supported for %1$s</string>
    <string name="deletion_not_supported">Deletion is not supported for %1$s</string>
    <string name="update_not_supported">Update is not supported for %1$s</string>
    <string name="invalid_cursor">Cursor is invalid!</string>
    <string name="could_not_move_cursor">Could not move cursor to position %1$d</string>
</resources>
